# trip

./: .replit  App.js  app.json  coffee.joblib  db.sqlite3  gallery.joblib  load_places_from_csv.py  manage.py  metro.js  package-lock.json  package.json  pyproject.toml  requirements.txt  rest.joblib
Pages/: BarsList.js  CoffeeShopsList.js  Home.js  Login.js  MuseusList.js  Place.js  RestaurantsList.js  SignUp.js  Slider.js  Trip.js  TripSetting.js  Userprofile.js
TripProject/: asgi.py  settings.py  urls.py  wsgi.py
recomendation/: admin.py  apps.py  bars.csv  galleries.csv  landmarks.csv  load_places_from_csv.py  models.py  museums.csv  parks.csv  restaurants.csv  savedModelbar.joblib  savedModelcoffee.joblib  savedModelmuseum.joblib  savedModelrest.joblib  serializers.py  urls.py  views.py
recomendation/migrations/: 0001_initial.py  0002_alter_review_mark.py  0002_mark_place_url_review_body.py  0003_place_image.py  0004_alter_place_category.py  0005_mark_category.py  0006_review_place_id_review_user_id_alter_review_place_and_more.py
recomendation/savedModel/: bar.joblib  bars_for_model.csv  coffee.joblib  coffee_shops.csv  coffeemodel.py  dataset1.csv  galleries_for_model.csv  gallery.joblib  model.joblib  museum.joblib  museums_for_model.csv  rest.joblib  restaurants_for_model.csv
user/: apps.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
