[tool.poetry]
name = "repl_nix_trip"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
MarkupSafe = "^2.1.2"
numpy = "^1.24.2"
seaborn = "^0.12.2"
jwt = "^1.3.1"
pandas = "^1.5.3"
sklearn = "^0.0.post2"
bs4 = "^0.0.1"
Django = "^4.1.6"
requests = "^2.28.2"
joblib = "^1.2.0"
matplotlib = "^3.6.3"
djangorestframework = "^3.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
